# Codewars_c

./: .gitignore  .nvim.lua  CMakeLists.txt  Codewars.pro  Makefile
asm/cat/: .nvim.lua  Makefile
asm/cat/src/: cat.asm
asm/codewars/: .asm-lsp.toml  .nvim.lua  Makefile
asm/codewars/src/: is_isogram.s  is_leap.s  is_prime.s  main.s  rot13.s  triangular.s
asm/fib/: .nvim.lua  Makefile
asm/fib/src/: fib.asm
asm/triangular/: .nvim.lua  Makefile
asm/triangular/src/: triangular.s
asm/xor_shell/: .nvim.lua  Makefile
asm/xor_shell/src/: xor_shell.asm
inc/: asm_interpret.h  bignum.h  bin_heap.h  brainfuck.h  commons.h  dyn_arr.h  gol.h  hash_table.h  inc_dec_sequences_count.h  int_partitions.h  lock_screen_combinations.h  next_bigger_number.h  next_smaller_number.h  num_sum_without_va.h  ocr.h  palindrome_numbers.h  parse_int.h  pointer_monster.h  prime_stream_simple.h  queue.h  regexp.h  roman.h  search_string.h  skyscrapers.h  snail.h  spinning_rings.h  trench_assault.h  voronoi.h
include/: ascii85.h  bignum.h  bignum_mul.h  bmp.h  central_attention.h  commons.h  gol.h  karatsuba.h  lcs.h  list.h  math_expression.h  merge_intervals.h  ocr.h  regexp.h  skyscapers.h  snail.h  spiral.h  triangle.h  voronoi.h
src/: ascii85.c  asm_interpret.c  bignum.c  bignum_mul.c  bin_heap.c  brainfuck.c  central_attention.c  coins.c  commons.c  dyn_arr.c  fft.c  gol.c  hash_table.c  inc_dec_sequences_count.c  int_partitions.c  karatsuba.c  lcs.c  list.c  lock_screen_combinations.c  main.c  math_expression.c  merge_intervals.c  mul.s  next_bigger_number.c  next_smaller_number.c  num_sum_without_va.c  ocr.c  ocr_obsolete.c  palindrome_numbers.c  parse_int.c  pointer_monster.c  prime_stream_simple.c  queue.c  regexp.c  roman.c  search_string.c  sequence_sum.s  skyscapers.c  skyscrapers.c  snail.c  (+7 more)
